deployments/imagery/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imagery
  namespace: imagery
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: imagery.k8s.imagilan
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: imagery
                port:
                  name: imagery-web
